--- a/_toc.yml
+++ b/_toc.yml
@@ -34,9 +34,9 @@ parts:
       -  file: derivative/derivative2
       -  file: derivative/laplacian
       -  file: derivative/problems
-   -  file: integral/intro
+   -  file: integral/int_intro
       sections:
-      -  file: integral/rectangle
+      -  file: integral/int_piecewise
    -  file: root-finding/intro
    -  file: ode/intro
    -  file: matrix/intro
