--- a/_toc.yml
+++ b/_toc.yml
@@ -38,6 +38,7 @@ parts:
       sections:
       -  file: integral/piecewise
       -  file: integral/improper_infinite
+      -  file: integral/applications
       -  file: integral/problems
       -  file: integral/exercises
    -  file: root-finding/intro
