--- a/_toc.yml
+++ b/_toc.yml
@@ -47,6 +47,7 @@ parts:
       sections:
       -  file: root-finding/root_polynomials
       -  file: root-finding/root_bisection
+      -  file: root-finding/root_newton
    -  file: integral/intro
       sections:
       -  file: integral/piecewise
