--- a/_toc.yml
+++ b/_toc.yml
@@ -51,6 +51,7 @@ parts:
       -  file: root-finding/applications
          sections:
          -  file: root-finding/turning_points
+         -  file: root-finding/ferromagnet
    -  file: integral/intro
       sections:
       -  file: integral/piecewise
