working on scattering angle.

--- a/_toc.yml
+++ b/_toc.yml
@@ -64,6 +64,7 @@ parts:
       -  file: integral/applications
          sections:
          -  file: integral/qm_ideal_gas
+         -  file: integral/scattering_angle
          -  file: integral/period_of_oscillation
       -  file: integral/solutions
    -  file: ode/intro
